# software-control

./: .gitignore  .gitmodules  .pre-commit-config.yaml  NOTICE  README.md  environment.yml  pyproject.toml
.cursor/rules/: code-standard-rules.mdc  software-control-project-rules.mdc
agents/: uitars15_agent.py
agents/ui_agent/util/: utils.py
experiments/: explore_baseline_trajectories.ipynb  perturbation_experiment.ipynb
magma/: __init__.py  data_ingestion.py  evaluation_pipeline.py  magma_inference_test.py  main.py  model_adaptation.py  modeling_magma.py  output_processing.py  ui_test_data.json  utils.py
magma/adapters/: magma_ui_adapter.py
magma/configs/: ui_test_config.yaml
magma/data_samples/: mind2web.json  osworldg.json  screenspot.json
magma/datasets/: ui_test_dataset.json  ui_test_loader.py
magma/processors/: ui_output_processor.py
scripts/: dataset_registry.yaml  download_datasets.py
src/perturbation_engine/: __init__.py  logging.py  main.py  types.py
src/perturbation_engine/data/: trajectory_data.py
src/perturbation_engine/scene/: __init__.py  analyzer.py  data.py
src/perturbation_engine/tests/: 0daf1895-493d-4b9a-ba8a-ba6a65c23a21_after.mhtml  test_scene_analyzers.py
